Description of enhanced dataset

--- a/HandMCreateEmbeddings.ipynb
+++ b/HandMCreateEmbeddings.ipynb
@@ -6,7 +6,7 @@
       "source": [
         "# H and M Create Embeddings"
       ],
-      "id": "f044573c-0971-4816-bd2b-9d7266692f43"
+      "id": "0b04965f-ff19-4d76-aecd-d38d81019dae"
     },
     {
       "cell_type": "code",
@@ -58,10 +58,8 @@
         "        colors = f\"[Colors: {', '.join(row['colour_group_name'])}]\"\n",
         "        patterns = f\"[Patterns: {', '.join(row['graphical_appearance_name'])}]\"\n",
         "        \n",
-        "        #enhanced_desc = (f\"{row['prod_name']} | {row['product_type_name']} | \"\n",
-        "        #                f\"{colors} {patterns} | {row['detail_desc']}\")\n",
-        "        enhanced_desc = (f\"{row['product_type_name']} | \"\n",
-        "                         f\"{colors} {patterns} | {row['detail_desc']}\")\n",
+        "        enhanced_desc = (f\"{row['prod_name']} | {row['product_type_name']} | \"\n",
+        "                        f\"{colors} {patterns} | {row['detail_desc']}\")\n",
         "        \n",
         "        results.append({\n",
         "            'product_code': row['product_code'],\n",
@@ -225,7 +223,7 @@
         "    elapsed_time = time.time() - start_time\n",
         "    print(f\"\\nTotal processing time: {elapsed_time:.1f} seconds\")"
       ],
-      "id": "09c84b2b"
+      "id": "25bbca83"
     },
     {
       "cell_type": "code",
@@ -235,7 +233,168 @@
       "source": [
         "create_embeddings()"
       ],
-      "id": "28b3d23c"
+      "id": "91c55d68"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Creating the Embedding Strings\n",
+        "\n",
+        "### Group the Articles with Same Product Code\n",
+        "\n",
+        "First, group the data by `product_code` using `groupby()`. This is\n",
+        "because a single product (like a t-shirt) might have multiple variants\n",
+        "(different colors/patterns) in the dataset. During this grouping, it:\n",
+        "\n",
+        "-   Takes the first occurrence of `prod_name`, `product_type_name`, and\n",
+        "    `detail_desc` for each product\n",
+        "-   Creates sorted lists of unique colors (`colour_group_name`) and\n",
+        "    patterns (`graphical_appearance_name`)\n",
+        "-   Keeps a list of all `article_id`s associated with each product\n",
+        "\n",
+        "### Create Enhanced Description Containing Variants (Color, Pattern)\n",
+        "\n",
+        "Then, for each product group, create an enhanced description by\n",
+        "combining:\n",
+        "\n",
+        "-   Product name\n",
+        "-   Product type\n",
+        "-   A list of all available colors\n",
+        "-   A list of all available patterns\n",
+        "-   The detailed description\n",
+        "\n",
+        "### Strap Top Example\n",
+        "\n",
+        "For example “Strap top” (product code “0108775”) is combined like this:\n",
+        "\n",
+        "-   Combine all colors: \\[“Black”, “White”, “Off White”\\]\n",
+        "-   Combine all patterns: \\[“Solid”, “Stripe”\\]\n",
+        "-   Create an enhanced description like: “Strap top \\| Vest top \\|\n",
+        "    \\[Colors: Black, Off White, White\\] \\[Patterns: Solid, Stripe\\] \\|\n",
+        "    Jersey top with narrow shoulder straps.”\n",
+        "\n",
+        "### The Enhanced Data Frame\n",
+        "\n",
+        "The final enhanced DataFrame contains:\n",
+        "\n",
+        "-   product_code: Unique identifier for each product\n",
+        "-   product_name: Name of the product\n",
+        "-   article_ids: List of all variant IDs for this product\n",
+        "-   num_variants: Number of color variants available\n",
+        "-   colors: List of available colors\n",
+        "-   patterns: List of available patterns\n",
+        "-   embedding_string: The enhanced description combining all attributes\n",
+        "\n",
+        "This enhanced description could be useful for:\n",
+        "\n",
+        "-   Search functionality that considers all variants\n",
+        "-   Product recommendations based on similar attributes\n",
+        "-   Better product discovery by including all available options in the\n",
+        "    description\n",
+        "\n",
+        "### Strap Top Example Details\n",
+        "\n",
+        "Here is a complete example using the “Strap top” (product code 0108775)\n",
+        "from the data, showing both the data before and after\n",
+        "\n",
+        "#### BEFORE (Separate Article Rows in Original Dataframe df)\n",
+        "\n",
+        "| article_id | product_code | prod_name     | product_type_name | detail_desc                             | colour_group_name | graphical_appearance_name |\n",
+        "|--------|---------|--------|------------|---------|------------|----------------|\n",
+        "| 0108775015 | 0108775      | Strap top     | Vest top          | Jersey top with narrow shoulder straps. | Black             | Solid                     |\n",
+        "| 0108775044 | 0108775      | Strap top     | Vest top          | Jersey top with narrow shoulder straps. | White             | Solid                     |\n",
+        "| 0108775051 | 0108775      | Strap top (1) | Vest top          | Jersey top with narrow shoulder straps. | Off White         | Stripe                    |\n",
+        "\n",
+        "#### AFTER (Single Product Row in the Enhanced DataFrame)\n",
+        "\n",
+        "| Field            | Value                                                                                                                               |\n",
+        "|----------------------------------|--------------------------------------|\n",
+        "| product_code     | 0108775                                                                                                                             |\n",
+        "| product_name     | Strap top                                                                                                                           |\n",
+        "| article_ids      | \\[‘0108775015’, ‘0108775044’, ‘0108775051’\\]                                                                                        |\n",
+        "| num_variants     | 3                                                                                                                                   |\n",
+        "| colors           | \\[‘Black’, ‘Off White’, ‘White’\\]                                                                                                   |\n",
+        "| patterns         | \\[‘Solid’, ‘Stripe’\\]                                                                                                               |\n",
+        "| embedding_string | Strap top \\| Vest top \\| \\[Colors: Black, Off White, White\\] \\[Patterns: Solid, Stripe\\] \\| Jersey top with narrow shoulder straps. |\n",
+        "\n",
+        "The transformation:\n",
+        "\n",
+        "1.  Takes 3 separate variant-level rows\n",
+        "2.  Combines them into 1 product-level row\n",
+        "3.  Preserves all variant information in organized lists\n",
+        "4.  Creates a comprehensive description string that includes all color\n",
+        "    and pattern options\n",
+        "\n",
+        "### More Examples:\n",
+        "\n",
+        "#### Example 1 - FLEECE PYJAMA:\n",
+        "\n",
+        "**BEFORE**\n",
+        "\n",
+        "| article_id | product_code | prod_name     | product_type_name        | detail_desc                 | colour_group_name | graphical_appearance_name |\n",
+        "|--------|---------|--------|------------|---------|------------|----------------|\n",
+        "| 0174057022 | 0174057      | FLEECE PYJAMA | Pyjama jumpsuit/playsuit | All-in-one pyjamas in soft… | Light Pink        | All over pattern          |\n",
+        "| 0174057026 | 0174057      | FLEECE PYJAMA | Pyjama jumpsuit/playsuit | All-in-one pyjamas in soft… | Light Grey        | All over pattern          |\n",
+        "| 0174057029 | 0174057      | FLEECE PYJAMA | Pyjama jumpsuit/playsuit | All-in-one pyjamas in soft… | White             | Dot                       |\n",
+        "| 0174057030 | 0174057      | FLEECE PYJAMA | Pyjama jumpsuit/playsuit | All-in-one pyjamas in soft… | Light Turquoise   | Stripe                    |\n",
+        "\n",
+        "**AFTER**\n",
+        "\n",
+        "| Field            | Value                                                                                                                                                                                                                                                                            |\n",
+        "|----------------------------------|--------------------------------------|\n",
+        "| product_code     | 0174057                                                                                                                                                                                                                                                                          |\n",
+        "| product_name     | FLEECE PYJAMA                                                                                                                                                                                                                                                                    |\n",
+        "| article_ids      | \\[‘0174057022’, ‘0174057026’, ‘0174057029’, ‘0174057030’\\]                                                                                                                                                                                                                       |\n",
+        "| num_variants     | 4                                                                                                                                                                                                                                                                                |\n",
+        "| colors           | \\[‘Light Grey’, ‘Light Pink’, ‘Light Turquoise’, ‘White’\\]                                                                                                                                                                                                                       |\n",
+        "| patterns         | \\[‘All over pattern’, ‘Dot’, ‘Stripe’\\]                                                                                                                                                                                                                                          |\n",
+        "| embedding_string | FLEECE PYJAMA \\| Pyjama jumpsuit/playsuit \\| \\[Colors: Light Grey, Light Pink, Light Turquoise, White\\] \\[Patterns: All over pattern, Dot, Stripe\\] \\| All-in-one pyjamas in soft, patterned fleece that fasten down the front and along one leg. Ribbing at the cuffs and hems. |\n",
+        "\n",
+        "#### Example 2 - Jerry jogger bottoms:\n",
+        "\n",
+        "**BEFORE**\n",
+        "\n",
+        "| article_id | product_code | prod_name            | product_type_name | detail_desc              | colour_group_name | graphical_appearance_name |\n",
+        "|--------|---------|--------|------------|---------|------------|----------------|\n",
+        "| 0118458003 | 0118458      | Jerry jogger bottoms | Trousers          | Trousers in sweatshirt … | Dark Grey         | Melange                   |\n",
+        "| 0118458028 | 0118458      | Jerry jogger bottoms | Trousers          | Trousers in sweatshirt … | Black             | Solid                     |\n",
+        "| 0118458034 | 0118458      | Jerry jogger bottoms | Trousers          | Trousers in sweatshirt … | Pink              | Solid                     |\n",
+        "| 0118458039 | 0118458      | Jerry jogger bottoms | Trousers          | Trousers in sweatshirt … | Dark Blue         | Melange                   |\n",
+        "\n",
+        "**AFTER**\n",
+        "\n",
+        "| Field            | Value                                                                                                                                                                                                                                                   |\n",
+        "|----------------------------------|--------------------------------------|\n",
+        "| product_code     | 0118458                                                                                                                                                                                                                                                 |\n",
+        "| product_name     | Jerry jogger bottoms                                                                                                                                                                                                                                    |\n",
+        "| article_ids      | \\[‘0118458003’, ‘0118458028’, ‘0118458034’, ‘0118458039’\\]                                                                                                                                                                                              |\n",
+        "| num_variants     | 4                                                                                                                                                                                                                                                       |\n",
+        "| colors           | \\[‘Black’, ‘Dark Blue’, ‘Dark Grey’, ‘Pink’\\]                                                                                                                                                                                                           |\n",
+        "| patterns         | \\[‘Melange’, ‘Solid’\\]                                                                                                                                                                                                                                  |\n",
+        "| embedding_string | Jerry jogger bottoms \\| Trousers \\| \\[Colors: Black, Dark Blue, Dark Grey, Pink\\] \\[Patterns: Melange, Solid\\] \\| Trousers in sweatshirt fabric with an elasticated drawstring waist, side pockets, a back pocket and ribbed hems. Soft brushed inside. |\n",
+        "\n",
+        "In both examples, you can see how the transformation:\n",
+        "\n",
+        "1.  Combines multiple variants of the same product into a single row\n",
+        "2.  Aggregates all colors and patterns into sorted, unique lists\n",
+        "3.  Preserves all article IDs for reference\n",
+        "4.  Creates a comprehensive description that includes all available\n",
+        "    options\n",
+        "5.  Maintains the core product information while consolidating the\n",
+        "    variant-specific details\n",
+        "\n",
+        "### Why We Are Doing This\n",
+        "\n",
+        "This makes it much easier to see how multiple product variants are\n",
+        "consolidated into a single, information-rich record while maintaining\n",
+        "all the important details from the original data.\n",
+        "\n",
+        "The grouping reduces multiple rows of variant-level information into a\n",
+        "single row of product-level information while preserving all the\n",
+        "important variant details in organized lists."
+      ],
+      "id": "2cfa9f4a-4a8c-4bc7-ba0b-71cf31168dd7"
     }
   ],
   "nbformat": 4,
